force-app/main/default/objects/Artifact__c/Artifact__c.object-meta.xml
<CustomObject>
    <label>Artifact</label>
    <nameField>
        <label>Document Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artifacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>