force-app/main/default/objects/Artifact__c/fields/Heroku_Connect_ID__c.field-meta.xml
<CustomField>
    <fullName>Heroku_Connect_ID__c</fullName>
    <externalId>true</externalId>
    <label>Heroku Connect ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>